--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -20,6 +20,10 @@
           <li>Enter your HTML notes here</li>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
+          <li>li is how you make comments and write lines</li>
+          <li>ul is for a block/paragraph of text</li>
+          <li>sections is where you combine headers and text</li>
+          <li>h1-h6 are markers for headers</li>
         </ul>
       </section>
    
@@ -46,6 +50,8 @@
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
+          <li>console.log(); is how you make notes to the console</li>
+          <li>var name = "" is how you make a variable</li>
         </ul>
       </section>
     </main>
@@ -53,5 +59,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"> </script>
   </body>
 </html>
