Attempt two:Updating notes

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li>Step 2: git commit -m "message"</li>
           <li>step 3: git pull origin main</li>
           <li>step 4: git push feature</li>
+          <li>Step 5: cry when it doesn't work then explain why to the rubber duck</li>
         </ul>
       </section>
    
