--- a/index.html
+++ b/index.html
@@ -4,44 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
+          <!--<li>Enter your HTML notes here</li>-->
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
+          <li>li is how you make comments and write lines</li>
+          <li>ul is for a block/paragraph of text</li>
+          <li>sections is where you combine headers and text</li>
+          <li>h1-h6 are markers for headers</li>
         </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-       <li>Enter your CSS notes here</li>
+       <!--<li>Enter your CSS notes here</li>-->
+       <li>A margin indicates how much space we want around the outside of an element.</li>
+       <li>A padding indicates how much space we want around the content inside an element.</li>
+      
         </ul>
       </section>
    
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>Enter your Git notes here</li>
+          <!--<li>Enter your Git notes here</li>-->
           <li>git check -b branchname makes new branch and moves you to it</li>
           <li>git status: checks what branch you are on </li>
+          <li>Step1:git add -A</li>
+          <li>Step 2: git commit -m "message"</li>
+          <li>step 3: git pull origin main</li>
+          <li>step 4: git push feature</li>
+          <li>Step 5: cry when it doesn't work then explain why to the rubber duck</li>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <!--<li>Enter your JavaScript notes here</li>-->
+          <li>console.log(); is how you make notes to the console</li>
+          <li>var name = "" is how you make a variable</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
@@ -49,5 +66,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"> </script>
   </body>
 </html>
